completed 2 main apies + everything alse related
